fix overflow

--- a/public/css/card.sass
+++ b/public/css/card.sass
@@ -3,7 +3,6 @@
 $card-width: 300px
 $card-height: 200px
 $one-card-size: 300px
-$multi-card-size: 600px
 
 .card
   background-color: $main-color
@@ -42,6 +41,6 @@ html
         display: flex
         flex-wrap: wrap
         margin-top: 20px
-        height: $multi-card-size
+        height: 100%
         flex-direction: row
         justify-content: center
